--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/reset.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Bate Papo UOL</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
+    </style>
 </head>
 <body>
+    <aside>
+        <section>
+            Escolha um contato
+            para enviar mensagem:
+        </section>
+        <div class="members_online">
+            <div class="member"><ion-icon name="people"></ion-icon>Todos<ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
+            <div class="member"><ion-icon name="person-circle"></ion-icon></ion-icon>João<ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
+            <div class="member"><ion-icon name="person-circle"></ion-icon></ion-icon>Maria<ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
+        </div>
+        <section>
+            Escolha a visibilidade:
+        </section>
+        <div class="members_online">
+            <div class="member">
+                <ion-icon name="lock-open-sharp"></ion-icon>
+                Público
+                <ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
+            <div class="member"><ion-icon name="lock-closed-sharp"></ion-icon>Reservadamente<ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
+        </div>
+    </aside>
+    <div class="background">
+    <header>
+        <img src="imgs/logo 1.png" alt="">
+        <ion-icon name="people" class="people"></ion-icon>
+    </header>
+    <main>
+        <ul>
+            <li class="status"><span>(09:21:45) </span><em>João</em> entra na sala...</li>
+            <li class="message"><span>(09:22:28) </span><em>João</em> para <em>Todos: </em>Bom dia</li>
+            <li class="message"><span>(09:22:38) </span><em>Maria</em> para <em>João: </em>Oi João :)</li>
+            <li class="private_message"><span>(09:22:48) </span><em>João</em> reservadamente para <em>Maria: </em>Oi gatinha quer tc?</li>
+            <li class="status"><span>(09:22:58) </span><em>Maria</em> saiu da sala...</li>
+        </ul>
+    </main>
+    <footer>
+        <input type="text" placeholder="Escreva aqui...">
+        <ion-icon name="paper-plane-outline" class="paperplane"></ion-icon>
+    </footer>
+    
+    </div>
 
-
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="script.js"></script>
+    
 </body>
 </html>
