Entrada na sala feito

--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
     </header>
     <main>
         <ul>
-            <li class="status"><span>(09:21:45) </span><em>João</em> entra na sala...</li>
-            <li class="message"><span>(09:22:28) </span><em>João</em> para <em>Todos: </em>Bom dia</li>
-            <li class="message"><span>(09:22:38) </span><em>Maria</em> para <em>João: </em>Oi João :)</li>
-            <li class="private_message"><span>(09:22:48) </span><em>João</em> reservadamente para <em>Maria: </em>Oi gatinha quer tc?</li>
-            <li class="status"><span>(09:22:58) </span><em>Maria</em> saiu da sala...</li>
         </ul>
     </main>
     <footer>
@@ -54,7 +49,7 @@
     </footer>
     
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="script.js"></script>
     
