--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
             para enviar mensagem:
         </section>
         <div class="members_online">
-            <div class="member"><ion-icon name="people"></ion-icon>Todos<ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
-            <div class="member"><ion-icon name="person-circle"></ion-icon></ion-icon>João<ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
-            <div class="member"><ion-icon name="person-circle"></ion-icon></ion-icon>Maria<ion-icon name="checkmark-sharp" class="check"></ion-icon></div>
+            <div class="member">
+                <ion-icon name="people"></ion-icon>Todos<ion-icon name="checkmark-sharp" class="check"></ion-icon>
+            </div>
+            <div class="member">
+                <ion-icon name="person-circle"></ion-icon></ion-icon>João<ion-icon name="checkmark-sharp" class="check"></ion-icon>
+            </div>
+            <div class="member">
+                <ion-icon name="person-circle"></ion-icon></ion-icon>Maria<ion-icon name="checkmark-sharp" class="check"></ion-icon>
+            </div>
         </div>
         <section>
             Escolha a visibilidade:
@@ -47,7 +53,8 @@
     </main>
     <footer>
         <input data-test="input-message" type="text" placeholder="Escreva aqui...">
-        <ion-icon name="paper-plane-outline" data-test="send-message" class="paperplane" onclick="enviarMensagens()"></ion-icon>
+        <ion-icon name="paper-plane-outline" data-test="send-message" class="paperplane" onclick="enviarMensagens()">
+        </ion-icon>
     </footer>
     
     </div>
